<resources>
    <string name="app_name">SuperCalc</string>
    <string name="action_settings">Settings</string>

    <string name="del">DEL</string>
    <string name="delLong">DELLONG</string>
    <string name="pozNeg">±</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="modulo">%</string>

    <string name="division">÷</string>
    <string name="multiply">×</string>
    <string name="equal">=</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="dot">.</string>

    <string name="power">^</string>
    <string name="powerTwo">x²</string>
    <string name="powerThree">x³</string>
    <string name="twoNd">2ⁿᵈ</string>
    <string name="twoX">2ⁿ</string>
    <string name="tenX">10ˣ</string>
    <string name="root">√</string>
    <string name="bracketOpen">(</string>
    <string name="bracketClose">)</string>
    <string name="factorial">!</string>
    <string name="logarithmNat">ln</string>
    <string name="logarithm">log</string>


    <string name="tan">tan</string>
    <string name="cos">cos</string>
    <string name="sin">sin</string>
    <string name="tanh">tanh</string>
    <string name="cosh">cosh</string>
    <string name="sinh">sinh</string>

    <string name="floor">⌊</string>
    <string name="ceiling">⌉</string>
    <string name="abs">|x|</string>


    <string name="pi">π</string>
    <string name="e">e</string>
    <string name="ePow">eˣ</string>
    <string name="rand">Rand</string>
    <string name="rad">Rad</string>

    <string name="infinity">∞</string>

    <string name="num0">0</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
