<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="tudor.com.supercalc.BottomFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#ff000000"
        android:focusableInTouchMode="false"
        android:id="@+id/blackBox"
        android:layout_weight="5"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:id="@+id/greenBox1"
            android:animationCache="false"
            >

            <Button
                android:id="@+id/buttonClear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/del"
                style="@style/middleNumbers"
                />

            <Button
                android:id="@+id/buttonModulo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/modulo"
                style="@style/middleNumbers"
                />

            <Button
                android:id="@+id/buttonPower"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/power"
                style="@style/middleNumbers"
                />

            <Button
                android:id="@+id/buttonDivision"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/division"
                style="@style/rightSymbols"
                android:background="#ff1c90c5"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:id="@+id/greenBox2"
            >

            <Button
                android:id="@+id/buttonSeven"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/seven"
                style="@style/middleNumbers"
                />

            <Button
                android:id="@+id/buttonEight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/eight"
                style="@style/middleNumbers"
                />

            <Button
                android:id="@+id/buttonNine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/nine"
                style="@style/middleNumbers"
                />

            <Button
                android:id="@+id/buttonMultiply"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/multiply"
                style="@style/rightSymbols"
                android:background="#ff1c90c5"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/buttonFour"
                style="@style/middleNumbers"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/four"
                />

            <Button
                android:id="@+id/buttonFive"
                style="@style/middleNumbers"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/five"
                />

            <Button
                android:id="@+id/buttonSix"
                style="@style/middleNumbers"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/six"
                />

            <Button
                android:id="@+id/buttonMinus"
                style="@style/rightSymbols"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/minus"
                android:background="#ff1c90c5"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                style="@style/middleNumbers"
                android:id="@+id/buttonOne"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/one"
                />

            <Button
                style="@style/middleNumbers"
                android:id="@+id/buttonTwo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/two"
                />

            <Button
                style="@style/middleNumbers"
                android:id="@+id/buttonThree"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/three"
                />

            <Button
                style="@style/rightSymbols"
                android:id="@+id/buttonPlus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/plus"
                android:background="#ff1c90c5"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:baselineAligned="false">

            <Button
                android:id="@+id/buttonZero"
                style="@style/middleNumbers"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/zero"
                android:layout_weight="2"/>

            <Button
                android:id="@+id/buttonDot"
                style="@style/middleNumbers"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/dot"
                android:gravity="center"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/buttonEqual"
                style="@style/rightSymbols"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/equal"
                android:background="#ff1c90c5"
                android:gravity="center"
                android:layout_weight="1"/>

        </LinearLayout>
    </LinearLayout>

</FrameLayout>
