<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivityFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="0"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="0"
            android:id="@+id/textView2"
            android:layout_below="@+id/textView"
            android:layout_alignLeft="@+id/textView"
            android:layout_alignStart="@+id/textView"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:gravity="bottom"
        android:layout_below="@+id/linearLayout">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/clear"
                android:id="@+id/button"
                android:layout_weight="1"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:textSize="@dimen/textSize"
                android:gravity="center"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pozNeg"
                android:id="@+id/button2"
                android:layout_weight="1"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:textSize="@dimen/textSize"
                android:gravity="center"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/percent"
                android:id="@+id/button3"
                android:layout_weight="1"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:textSize="@dimen/textSize"
                android:gravity="center"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/division"
                android:id="@+id/button4"
                android:layout_weight="1"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:textSize="@dimen/textSize"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/seven"
                android:id="@+id/button5"
                android:layout_weight="1"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:textSize="@dimen/textSize"
                android:gravity="center"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/eight"
                android:id="@+id/button6"
                android:layout_weight="1"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:textSize="@dimen/textSize"
                android:gravity="center"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/nine"
                android:id="@+id/button7"
                android:layout_weight="1"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:textSize="@dimen/textSize"
                android:gravity="center"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/multiply"
                android:id="@+id/button8"
                android:layout_weight="1"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:textSize="@dimen/textSize"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/four"
                android:id="@+id/button9"
                android:layout_weight="1"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:textSize="@dimen/textSize"
                android:gravity="center"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/five"
                android:id="@+id/button10"
                android:layout_weight="1"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:textSize="@dimen/textSize"
                android:gravity="center"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/six"
                android:id="@+id/button11"
                android:layout_weight="1"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:textSize="@dimen/textSize"
                android:gravity="center"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/substraction"
                android:id="@+id/button12"
                android:layout_weight="1"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:textSize="@dimen/textSize"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:id="@+id/button13"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:textSize="@dimen/textSize"
                android:gravity="center"
                android:layout_weight="3"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dot"
                android:id="@+id/button14"
                android:layout_weight="1"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:textSize="@dimen/textSize"
                android:gravity="center"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equal"
                android:id="@+id/button15"
                android:layout_weight="1"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:textSize="@dimen/textSize"
                android:gravity="center"/>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
