<LinearLayout
    android:id="@+id/mainRedBox"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivityFragment"
    android:background="@color/primaryColor"
    android:elevation="10dp">

    <TextView
        android:id="@+id/textViewDetail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="right"
        android:layout_weight="1"
        android:gravity="bottom|right"
        android:textSize="50sp"
        android:textColor="#282828"
        android:inputType="textNoSuggestions|text"
        android:maxLines="1"
        android:lines="1"
        android:singleLine="true"
        android:hapticFeedbackEnabled="false"
        android:textIsSelectable="false"
        android:textColorHighlight="@android:color/transparent"
        android:textColorLink="@android:color/transparent"
        android:textAllCaps="false"
        android:textStyle="normal"
        android:selectAllOnFocus="false"
        android:hint="0"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/textViewResult"
            android:layout_weight="1"
            android:gravity="bottom|right"
            android:textSize="30sp"
            android:textColor="#f2a4a4a4"
            android:linksClickable="false"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:hint="0"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/orangeBox2"
            android:layout_weight="1"
            >

            <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/buttonBracketOpen"
                android:text="@string/bracketOpen"
                android:elegantTextHeight="false"
                android:textAllCaps="false"
                android:clickable="true"
                android:enabled="true"
                style="@style/topTheme"
                android:layout_marginLeft="8dp"/>

            <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/buttonBracketClose"
                android:text="@string/bracketClose"
                android:elegantTextHeight="false"
                android:textAllCaps="false"
                android:clickable="true"
                android:enabled="true"
                style="@style/topTheme"
                android:layout_marginLeft="8dp"/>

            <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:textAllCaps="false"
                android:text="@string/root"
                android:id="@+id/buttonRoot"
                android:clickable="true"
                android:enabled="true"
                style="@style/topTheme"
                android:layout_marginLeft="8dp"/>

            <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/buttonFactorial"
                android:textAllCaps="false"
                android:text="@string/factorial"
                android:clickable="true"
                android:enabled="true"
                style="@style/topTheme"
                android:layout_marginLeft="8dp"/>

        </LinearLayout>

</LinearLayout>